--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <div class="loading"></div>
     <div class="main-robot-box">
         <div class="robot-mobile-title">
+            <icon></icon>
             <span>胖智客服</span>
         </div>
         <div class="up-cb-box dialog-list" id="dialogList">
@@ -39,7 +40,7 @@
             </div>
         </div>
 
-        <div class="up-dialog-post " id="input-box">
+        <div class="up-dialog-post fix-bottom" id="input-box">
             <!-- 加一个 gray-over  就是  重新连接的状态 -->
             <ul class="search-tips" style="display: none;">
                 <!-- 搜索提示 -->
@@ -51,7 +52,7 @@
                     <div class="customer-btn"></div>
                     <input id="msg"></input>
                     <div class="send-msg" id="send">
-                        <p>发送</p>
+                        <icon></icon>
                     </div>
             </div>
         </div>
