--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" name="viewport">
     <meta content="yes" name="apple-mobile-web-app-capable">
     <meta content="black" name="apple-mobile-web-app-status-bar-style">
-    <meta content="telephone=no" name="format-detection">    
+    <meta content="telephone=no" name="format-detection">   
+    <base target="_blank" /> 
     <title>胖智机器人|智能客服系统领先品牌,更聪明的机器人客服</title>
     <link href="http://api.aijust.com:8030/images/ico.ico" rel="shortcut icon" type="image/x-icon">
     <meta name="keywords" content="胖智机器人，智能客服，机器人客服，在线客服系统，智能咨询，客服工具，机器人，聊天机器人，在线机器人，智能，智能系统，客服系统，云客服，呼叫中心客服系统，网上客服软件，人机对话，客服助手，智能语音交互，全智能云客服，客服软件，机器人客服价格，机器人客服多少钱。">
@@ -40,7 +41,7 @@
             </div>
         </div>
 
-        <div class="up-dialog-post fix-bottom" id="input-box">
+        <div class="up-dialog-post" id="input-box">
             <!-- 加一个 gray-over  就是  重新连接的状态 -->
             <ul class="search-tips" style="display: none;">
                 <!-- 搜索提示 -->
@@ -50,7 +51,7 @@
             </div>
             <div class="bottom-text-content box-flex" data-direction="row">
                     <div class="customer-btn"></div>
-                    <input id="msg"></input>
+                    <input id="msg" type="text"></input>
                     <div class="send-msg" id="send">
                         <icon></icon>
                     </div>
